cmake_minimum_required(VERSION 2.8)

project(skia)

set(SKIA_SRCS 
  src/core/Sk64.cpp
  src/core/SkAAClip.cpp
  src/core/SkAdvancedTypefaceMetrics.cpp
  src/core/SkAlphaRuns.cpp
  src/core/SkAnnotation.cpp
  src/core/SkBBoxHierarchy.cpp
  src/core/SkBBoxHierarchyRecord.cpp
  src/core/SkBBoxRecord.cpp
  src/core/SkBitmap.cpp
  src/core/SkBitmapHeap.cpp
  src/core/SkBitmapProcShader.cpp
  src/core/SkBitmapProcState.cpp
  src/core/SkBitmapProcState_matrixProcs.cpp
  src/core/SkBitmapSampler.cpp
  src/core/SkBitmap_scroll.cpp
  src/core/SkBlitMask_D32.cpp
  src/core/SkBlitRow_D16.cpp
  src/core/SkBlitRow_D32.cpp
  src/core/SkBlitRow_D4444.cpp
  src/core/SkBlitter.cpp
  src/core/SkBlitter_4444.cpp
  src/core/SkBlitter_A1.cpp
  src/core/SkBlitter_A8.cpp
  src/core/SkBlitter_ARGB32.cpp
  src/core/SkBlitter_RGB16.cpp
  src/core/SkBlitter_Sprite.cpp
  src/core/SkBuffer.cpp
  src/core/SkCanvas.cpp
  src/core/SkChunkAlloc.cpp
  src/core/SkClipStack.cpp
  src/core/SkColor.cpp
  src/core/SkColorFilter.cpp
  src/core/SkColorTable.cpp
  src/core/SkComposeShader.cpp
  src/core/SkConfig8888.cpp
  src/core/SkCordic.cpp
  src/core/SkCubicClipper.cpp
  src/core/SkData.cpp
  src/core/SkDebug.cpp
  src/core/SkDeque.cpp
  src/core/SkDevice.cpp
  src/core/SkDeviceProfile.cpp
  src/core/SkDither.cpp
  src/core/SkDraw.cpp
  src/core/SkEdge.cpp
  src/core/SkEdgeBuilder.cpp
  src/core/SkEdgeClipper.cpp
  src/core/SkError.cpp
  src/core/SkFDStream.cpp
  src/core/SkFilterProc.cpp
  src/core/SkFlate.cpp
  src/core/SkFlattenable.cpp
  src/core/SkFlattenableBuffers.cpp
  src/core/SkFloat.cpp
  src/core/SkFloatBits.cpp
  src/core/SkFontDescriptor.cpp
  src/core/SkFontHost.cpp
  src/core/SkFontStream.cpp
  src/core/SkGeometry.cpp
  src/core/SkGlyphCache.cpp
  src/core/SkGraphics.cpp
  src/core/SkImageFilter.cpp
  src/core/SkImageFilterUtils.cpp
  src/core/SkInstCnt.cpp
  src/core/SkLineClipper.cpp
  src/core/SkMallocPixelRef.cpp
  src/core/SkMask.cpp
  src/core/SkMaskFilter.cpp
  src/core/SkMaskGamma.cpp
  src/core/SkMath.cpp
  src/core/SkMatrix.cpp
  src/core/SkMemory_stdlib.cpp
  src/core/SkMetaData.cpp
  src/core/SkOrderedReadBuffer.cpp
  src/core/SkOrderedWriteBuffer.cpp
  src/core/SkPackBits.cpp
  src/core/SkPaint.cpp
  src/core/SkPaintPriv.cpp
  src/core/SkPath.cpp
  src/core/SkPathEffect.cpp
  src/core/SkPathHeap.cpp
  src/core/SkPathMeasure.cpp
  src/core/SkPicture.cpp
  src/core/SkPictureFlat.cpp
  src/core/SkPicturePlayback.cpp
  src/core/SkPictureRecord.cpp
  src/core/SkPictureStateTree.cpp
  src/core/SkPixelRef.cpp
  src/core/SkPoint.cpp
  src/core/SkProcSpriteBlitter.cpp
  src/core/SkPtrRecorder.cpp
  src/core/SkQuadClipper.cpp
  src/core/SkRRect.cpp
  src/core/SkRTree.cpp
  src/core/SkRasterClip.cpp
  src/core/SkRasterizer.cpp
  src/core/SkRect.cpp
  src/core/SkRefCnt.cpp
  src/core/SkRefDict.cpp
  src/core/SkRegion.cpp
  src/core/SkRegion_path.cpp
  src/core/SkRegion_rects.cpp
  src/core/SkScalar.cpp
  src/core/SkScalerContext.cpp
  src/core/SkScan.cpp
  src/core/SkScan_AntiPath.cpp
  src/core/SkScan_Antihair.cpp
  src/core/SkScan_Hairline.cpp
  src/core/SkScan_Path.cpp
  src/core/SkShader.cpp
  src/core/SkSpriteBlitter_ARGB32.cpp
  src/core/SkSpriteBlitter_RGB16.cpp
  src/core/SkStream.cpp
  src/core/SkString.cpp
  src/core/SkStringUtils.cpp
  src/core/SkStroke.cpp
  src/core/SkStrokeRec.cpp
  src/core/SkStrokerPriv.cpp
  src/core/SkTLS.cpp
  src/core/SkTSearch.cpp
  src/core/SkTileGrid.cpp
  src/core/SkTileGridPicture.cpp
  src/core/SkTypeface.cpp
  src/core/SkTypefaceCache.cpp
  src/core/SkUnPreMultiply.cpp
  src/core/SkUtils.cpp
  src/core/SkUtilsArm.cpp
  src/core/SkWriter32.cpp
  src/core/SkXfermode.cpp
  src/sfnt/SkOTTable_name.cpp
  src/sfnt/SkOTUtils.cpp
  src/effects/Sk1DPathEffect.cpp
  src/effects/Sk2DPathEffect.cpp
  src/effects/SkArithmeticMode.cpp
  src/effects/SkAvoidXfermode.cpp
  src/effects/SkBicubicImageFilter.cpp
  src/effects/SkBitmapSource.cpp
  src/effects/SkBlendImageFilter.cpp
  src/effects/SkBlurDrawLooper.cpp
  src/effects/SkBlurImageFilter.cpp
  src/effects/SkBlurMask.cpp
  src/effects/SkBlurMaskFilter.cpp
  src/effects/SkColorFilterImageFilter.cpp
  src/effects/SkColorFilters.cpp
  src/effects/SkColorMatrix.cpp
  src/effects/SkColorMatrixFilter.cpp
  src/effects/SkCornerPathEffect.cpp
  src/effects/SkDashPathEffect.cpp
  src/effects/SkDiscretePathEffect.cpp
  src/effects/SkDisplacementMapEffect.cpp
  src/effects/SkEmbossMask.cpp
  src/effects/SkEmbossMaskFilter.cpp
  src/effects/SkKernel33MaskFilter.cpp
  src/effects/SkLayerDrawLooper.cpp
  src/effects/SkLayerRasterizer.cpp
  src/effects/SkLightingImageFilter.cpp
  src/effects/SkMagnifierImageFilter.cpp
  src/effects/SkMatrixConvolutionImageFilter.cpp
  src/effects/SkMergeImageFilter.cpp
  src/effects/SkMorphologyImageFilter.cpp
  src/effects/SkOffsetImageFilter.cpp
  src/effects/SkPaintFlagsDrawFilter.cpp
  src/effects/SkPerlinNoiseShader.cpp
  src/effects/SkPixelXorXfermode.cpp
  src/effects/SkPorterDuff.cpp
  src/effects/SkRectShaderImageFilter.cpp
  src/effects/SkStippleMaskFilter.cpp
  src/effects/SkTableColorFilter.cpp
  src/effects/SkTableMaskFilter.cpp
  src/effects/SkTestImageFilters.cpp
  src/effects/SkTransparentShader.cpp
  src/effects/gradients/SkBitmapCache.cpp
  src/effects/gradients/SkClampRange.cpp
  src/effects/gradients/SkGradientShader.cpp
  src/effects/gradients/SkLinearGradient.cpp
  src/effects/gradients/SkRadialGradient.cpp
  src/effects/gradients/SkSweepGradient.cpp
  src/effects/gradients/SkTwoPointConicalGradient.cpp
  src/effects/gradients/SkTwoPointRadialGradient.cpp
  src/gpu/GrAAConvexPathRenderer.cpp
  src/gpu/GrAAHairLinePathRenderer.cpp
  src/gpu/GrAARectRenderer.cpp
  src/gpu/GrAddPathRenderers_default.cpp
  src/gpu/GrAllocPool.cpp
  src/gpu/GrAtlas.cpp
  src/gpu/GrBufferAllocPool.cpp
  src/gpu/GrCacheID.cpp
  src/gpu/GrClipData.cpp
  src/gpu/GrClipMaskCache.cpp
  src/gpu/GrClipMaskManager.cpp
  src/gpu/GrContext.cpp
  src/gpu/GrDefaultPathRenderer.cpp
  src/gpu/GrDrawState.cpp
  src/gpu/GrDrawTarget.cpp
  src/gpu/GrEffect.cpp
  src/gpu/GrGeometryBuffer.cpp
  src/gpu/GrGpu.cpp
  src/gpu/GrGpuFactory.cpp
  src/gpu/GrInOrderDrawBuffer.cpp
  src/gpu/GrMemory.cpp
  src/gpu/GrMemoryPool.cpp
  src/gpu/GrOvalRenderer.cpp
  src/gpu/GrPath.cpp
  src/gpu/GrPathRenderer.cpp
  src/gpu/GrPathRendererChain.cpp
  src/gpu/GrPathUtils.cpp
  src/gpu/GrRectanizer.cpp
  src/gpu/GrRectanizer_fifo.cpp
  src/gpu/GrReducedClip.cpp
  src/gpu/GrRenderTarget.cpp
  src/gpu/GrResource.cpp
  src/gpu/GrResourceCache.cpp
  src/gpu/GrSWMaskHelper.cpp
  src/gpu/GrSoftwarePathRenderer.cpp
  src/gpu/GrStencil.cpp
  src/gpu/GrStencilAndCoverPathRenderer.cpp
  src/gpu/GrStencilBuffer.cpp
  src/gpu/GrSurface.cpp
  src/gpu/GrTextContext.cpp
  src/gpu/GrTextStrike.cpp
  src/gpu/GrTexture.cpp
  src/gpu/GrTextureAccess.cpp
  src/gpu/SkGpuDevice.cpp
  src/gpu/SkGr.cpp
  src/gpu/SkGrFontScaler.cpp
  src/gpu/SkGrPixelRef.cpp
  src/gpu/SkGrTexturePixelRef.cpp
  src/gpu/effects/GrConfigConversionEffect.cpp
  src/gpu/effects/GrConvolutionEffect.cpp
  src/gpu/effects/GrSimpleTextureEffect.cpp
  src/gpu/effects/GrSingleTextureEffect.cpp
  src/gpu/effects/GrTextureDomainEffect.cpp
  src/gpu/effects/GrTextureStripAtlas.cpp
  src/gpu/gl/GrGLBufferImpl.cpp
  src/gpu/gl/GrGLCaps.cpp
  src/gpu/gl/GrGLContext.cpp
  src/gpu/gl/GrGLCreateNullInterface.cpp
  src/gpu/gl/GrGLDefaultInterface_native.cpp
  src/gpu/gl/GrGLEffect.cpp
  src/gpu/gl/GrGLEffectMatrix.cpp
  src/gpu/gl/GrGLExtensions.cpp
  src/gpu/gl/GrGLIndexBuffer.cpp
  src/gpu/gl/GrGLInterface.cpp
  src/gpu/gl/GrGLNoOpInterface.cpp
  src/gpu/gl/GrGLPath.cpp
  src/gpu/gl/GrGLProgram.cpp
  src/gpu/gl/GrGLProgramDesc.cpp
  src/gpu/gl/GrGLRenderTarget.cpp
  src/gpu/gl/GrGLSL.cpp
  src/gpu/gl/GrGLShaderBuilder.cpp
  src/gpu/gl/GrGLStencilBuffer.cpp
  src/gpu/gl/GrGLTexture.cpp
  src/gpu/gl/GrGLUniformManager.cpp
  src/gpu/gl/GrGLUtil.cpp
  src/gpu/gl/GrGLVertexArray.cpp
  src/gpu/gl/GrGLVertexBuffer.cpp
  src/gpu/gl/GrGpuGL.cpp
  src/gpu/gl/GrGpuGL_program.cpp
  src/gpu/gl/SkGLContextHelper.cpp
  src/gpu/gl/SkNullGLContext.cpp
  src/gpu/gl/debug/GrBufferObj.cpp
  src/gpu/gl/debug/GrDebugGL.cpp
  src/gpu/gl/debug/GrFrameBufferObj.cpp
  src/gpu/gl/debug/GrGLCreateDebugInterface.cpp
  src/gpu/gl/debug/GrProgramObj.cpp
  src/gpu/gl/debug/GrShaderObj.cpp
  src/gpu/gl/debug/GrTextureObj.cpp
  src/gpu/gl/debug/GrTextureUnitObj.cpp
  src/gpu/gl/debug/SkDebugGLContext.cpp
  src/image/SkDataPixelRef.cpp
  src/image/SkImage.cpp
  src/image/SkImagePriv.cpp
  src/image/SkImage_Codec.cpp
  src/image/SkImage_Gpu.cpp
  src/image/SkImage_Picture.cpp
  src/image/SkImage_Raster.cpp
  src/image/SkSurface.cpp
  src/image/SkSurface_Gpu.cpp
  src/image/SkSurface_Picture.cpp
  src/image/SkSurface_Raster.cpp
)

list(APPEND SKIA_SRCS
  src/opts/SkBitmapProcState_opts_SSE2.cpp
  src/opts/SkBitmapProcState_opts_SSSE3.cpp
  src/opts/SkBlitRect_opts_SSE2.cpp
  src/opts/SkBlitRow_opts_SSE2.cpp
  src/opts/SkUtils_opts_SSE2.cpp
  src/opts/opts_check_SSE2.cpp
  src/ports/SkFontHost_mac.cpp
  src/ports/SkOSFile_stdio.cpp
  src/ports/SkThread_pthread.cpp
  src/ports/SkDebug_stdio.cpp
  src/utils/mac/SkCreateCGImageRef.cpp
  src/utils/mac/SkStream_mac.cpp
  src/gpu/gl/mac/GrGLCreateNativeInterface_mac.cpp
  src/gpu/gl/mac/SkNativeSharedGLContext_mac.cpp
  src/gpu/gl/mac/SkNativeGLContext_mac.cpp
)

include_directories(
  include/config
  include/core
  include/effects
  include/gpu
  include/lazy
  include/ports
  src/core
  src/gpu
  src/image
  src/sfnt
  include/utils
  include/utils/mac
)

add_definitions(
  -DSK_RELEASE
  -DGR_RELEASE=1
  -DSK_A32_SHIFT=24 -DSK_R32_SHIFT=16 -DSK_G32_SHIFT=8 -DSK_B32_SHIFT=0
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -mssse3 -Wno-c++11-extensions")

add_library(skia STATIC ${SKIA_SRCS})
